--- a/index.html
+++ b/index.html
@@ -256,5 +256,41 @@ document.getElementById('authForm').addEventListener('submit',e=>{
 
 updateDashboard();
 </script>
+
+<!-- 🔥 FIREBASE CHECK ACCESS -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "TA_API_KEY",
+    authDomain: "TA_AUTH_DOMAIN",
+    projectId: "gc-digital-93913",
+    storageBucket: "TA_STORAGE_BUCKET",
+    messagingSenderId: "TA_MESSAGING_ID",
+    appId: "TA_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  const userId = "UQSs6eD3pdzVKemkNINS";
+
+  async function checkAccess() {
+    const ref = doc(db, "users", userId);
+    const snap = await getDoc(ref);
+
+    if (snap.exists() && snap.data().isPaid === true) {
+      document.body.style.display = "block";
+    } else {
+      document.body.innerHTML = "<h1>Accès réservé</h1>";
+    }
+  }
+
+  checkAccess();
+</script>
+
 </body>
 </html>
+
+
