--- a/index.html
+++ b/index.html
@@ -1,38 +1,136 @@
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+// Stack : Next.js (React) + Tailwind + Firebase (Auth + Firestore) + Stripe
+// Ce fichier représente une base fonctionnelle (MVP) de la plateforme GC.digital
 
-const firebaseConfig = {
-  apiKey: "TA_API_KEY",
-  authDomain: "TA_AUTH_DOMAIN",
-  projectId: "gc-digital-93913",
-  storageBucket: "TA_STORAGE_BUCKET",
-  messagingSenderId: "TA_MESSAGING_ID",
-  appId: "TA_APP_ID"
-};
+// =========================
+// 1. UI – Page principale
+// =========================
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+import { useEffect, useState } from "react";
+import { getAuth, onAuthStateChanged } from "firebase/auth";
+import { getFirestore, doc, getDoc, updateDoc } from "firebase/firestore";
+import { loadStripe } from "@stripe/stripe-js";
 
-// 🔑 ID DU USER (celui de Firestore)
-const userId = "UQSs6eD3pdzVKemkNINS";
+const stripePromise = loadStripe("STRIPE_PUBLIC_KEY");
 
-async function checkAccess() {
-  const ref = doc(db, "users", userId);
-  const snap = await getDoc(ref);
+export default function Home() {
+  const [user, setUser] = useState(null);
+  const [progress, setProgress] = useState(0);
 
-  const paywall = document.getElementById("paywall");
-  const formation = document.getElementById("formation");
+  useEffect(() => {
+    const auth = getAuth();
+    onAuthStateChanged(auth, (u) => setUser(u));
+  }, []);
 
-  if (snap.exists() && snap.data().isPaid === true) {
-    paywall.style.display = "none";
-    formation.style.display = "block";
-    updateDashboard();
-  } else {
-    paywall.style.display = "block";
-    formation.style.display = "none";
-  }
+  const handleCheckout = async () => {
+    const stripe = await stripePromise;
+    await stripe.redirectToCheckout({
+      sessionId: "STRIPE_SESSION_ID",
+    });
+  };
+
+  return (
+    <main className="min-h-screen bg-black text-white flex flex-col items-center px-6">
+      {/* Brand */}
+      <section className="text-center mt-20 max-w-3xl">
+        <h1 className="text-5xl font-bold tracking-wide">GC.digital</h1>
+        <p className="text-gray-300 mt-6 text-lg">
+          La formation GC.digital est conçue pour les débutants qui se sentent
+          perdus. Une méthode claire, simple et structurée pour comprendre et
+          réussir dans le marketing digital.
+        </p>
+      </section>
+
+      {/* Pricing */}
+      {!user && (
+        <section className="mt-14 bg-zinc-900 p-8 rounded-2xl shadow-xl">
+          <p className="text-3xl font-bold">198,99 €</p>
+          <button
+            onClick={handleCheckout}
+            className="mt-6 w-full bg-white text-black py-3 rounded-xl font-semibold hover:opacity-90"
+          >
+            S'inscrire et débloquer la formation
+          </button>
+        </section>
+      )}
+
+      {/* Formation */}
+      {user && (
+        <section className="mt-16 w-full max-w-4xl">
+          {[1, 2, 3, 4].map((chapter) => (
+            <Chapter key={chapter} index={chapter} />
+          ))}
+        </section>
+      )}
+    </main>
+  );
 }
 
-checkAccess();
-</script>
+// =========================
+// 2. Chapitre
+// =========================
+
+function Chapter({ index }) {
+  const [xp, setXp] = useState(0);
+  const unlocked = index === 1 || xp >= 100;
+
+  return (
+    <div className={`mb-10 p-6 rounded-2xl ${unlocked ? "bg-zinc-900" : "bg-zinc-800 opacity-40"}`}>
+      <h2 className="text-2xl font-bold">Chapitre {index}</h2>
+
+      {/* Modules */}
+      <div className="mt-4 space-y-3">
+        {[1, 2, 3, 4].map((m) => (
+          <Module key={m} locked={!unlocked} />
+        ))}
+      </div>
+
+      {/* XP Dashboard */}
+      <div className="mt-6">
+        <p className="text-sm text-gray-400">Progression du chapitre</p>
+        <div className="w-full bg-zinc-700 rounded-full h-3 mt-2">
+          <div
+            className="bg-white h-3 rounded-full transition-all"
+            style={{ width: `${xp}%` }}
+          />
+        </div>
+        <p className="text-sm mt-2">+25% XP par chapitre terminé</p>
+      </div>
+    </div>
+  );
+}
+
+// =========================
+// 3. Module
+// =========================
+
+function Module({ locked }) {
+  const [time, setTime] = useState(0);
+
+  useEffect(() => {
+    if (!locked) {
+      const interval = setInterval(() => setTime((t) => t + 1), 60000);
+      return () => clearInterval(interval);
+    }
+  }, [locked]);
+
+  return (
+    <div className="bg-black p-4 rounded-xl flex justify-between items-center">
+      <div>
+        <p className="font-medium">Module</p>
+        <p className="text-xs text-gray-400">Temps regardé : {time} min</p>
+      </div>
+      {locked && <span className="text-xs text-red-400">Bloqué</span>}
+    </div>
+  );
+}
+
+// =========================
+// 4. Sécurité & logique
+// =========================
+// - Accès conditionné à Auth Firebase
+// - Firestore stocke :
+//   - paiement : true/false
+//   - chapitre_actuel
+//   - temps_par_module
+// - Stripe Webhook valide l'accès
+// - Chapitre suivant bloqué tant que XP < 100
